This should prevent the 'done' column from wrapping

--- a/web-app/css/screen.css
+++ b/web-app/css/screen.css
@@ -83,10 +83,10 @@ caption {background:#eee;}
 .ruck-span-1 { width: 4%; }
 .ruck-span-2 { width: 8%; }
 .ruck-span-3 { width: 12%; }
-.ruck-span-4 { width: 16%; }
+.ruck-span-4 { width: 15%; }
 .ruck-span-5 { width: 20%; }
 .ruck-span-6 { width: 25%; }
-.ruck-span-7 { width: 29%; }
+.ruck-span-7 { width: 30%; }
 .ruck-span-8 { width: 33%; }
 .ruck-span-9 { width: 37%; }
 .ruck-span-10 { width: 41%; }
